--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -13,10 +13,10 @@
         -->
         <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
           <p class="text-align-left">
-            Hi! I am an incoming PhD student at MIT with an M.Sc. Informatics from TU Munich.
+            Hi! I am a PhD student at MIT with an M.Sc. Informatics from TU Munich.
             <br>
             I work on graph/geometric machine learning and self-supervised learning, often with applications to proteins and smaller molecules.
-            At MIT CSAIL I'll be advised by
+            At MIT CSAIL I am advised by
             Prof. <a href="http://people.csail.mit.edu/tommi/" target="_blank"
                      class="link-style-green">Tommi Jaakkola</a> and Prof. <a
             href="https://www.regina.csail.mit.edu/" target="_blank" class="link-style-green">Regina Barzilay</a>.
