--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -109,7 +109,7 @@
                 Hannes Stärk*, Octavian-Eugen Ganea*, Lagnajit Pattanaik, Regina Barzilay, Tommi Jaakkola
               </p>
               <p class="item-content">
-                <i>Under review. Also accepted at <a href="https://gt-rl.github.io/" target="_blank"
+                <i>ICML 2022. Also accepted at <a href="https://gt-rl.github.io/" target="_blank"
                                                      class="link-style-green">ICLR'22 GTRL</a> and <a
                   href="https://www.mldd-workshop.org/" target="_blank"
                   class="link-style-green">ICLR'22 MLDD</a>. </i>
@@ -139,7 +139,7 @@
 
               </p>
               <p class="item-content">
-                <i>Under review. Also accepted at <a href="https://ai4sciencecommunity.github.io/" target="_blank"
+                <i>ICML 2022. Also accepted at <a href="https://ai4sciencecommunity.github.io/" target="_blank"
                                                      class="link-style-green">NeurIPS'21 AI4S</a>, <a
                   href="https://ml4physicalsciences.github.io/2021/" target="_blank"
                   class="link-style-green">NeurIPS'21 ML4PH</a> and <a class="item-subtitle link-style-black"
