--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -214,62 +214,53 @@
         <div fxFlex="10" fxFlex.xs="2"></div>
         <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
 
-          <div class="item" fxLayout="column">
-            <div fxLayout="row">
-              <h3>
-                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2204.07697"
-                   target="_blank">
-                  Theory of Graph Neural Networks: Representation and Learning (ICLR 2022)
-                </a></h3>
-            </div>
-            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
-              <div>
-                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                17th of May 2022
-              </div>
-              <div>
-                <a>
-                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
-                  Stefanie Jegelka
-                </a>
-              </div>
-            </div>
-            <p class="paragraph">
-              <a class="slight-bold">Speaker:</a>
-              <a
-                class="item-subtitle link-style-black"
-                href="https://cptq.github.io/"
-                target="_blank">Derek Lim</a>, who is a PhD students in the group of Prof. Stefanie Jegelka
-              at MIT. Derek previously presented ESAN and Sign/Basis Nets in the reading group!
-            </p>
-            <p class="no-margin">
-              <a class="slight-bold">Abstract:</a>
-              Graph Neural Networks (GNNs), neural network architectures targeted to learning representations of graphs,
-              have become a popular learning model for prediction tasks on nodes, graphs and configurations of points,
-              with wide success in practice. This article summarizes a selection of the emerging theoretical results on
-              approximation and learning properties of widely used message passing GNNs and higher-order GNNs, focusing
-              on representation, generalization and extrapolation. Along the way, it summarizes mathematical
-              connections.
-            </p>
-          </div>
-          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
 
           <div class="item" fxLayout="column">
             <div fxLayout="row">
+              <h3>
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2201.12176"
+                   target="_blank">
+                  Generative Coarse-Graining of Molecular Conformations (2022)
+                </a></h3>
             </div>
             <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
               <div>
                 <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
                 24th of May 2022
               </div>
+              <div>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Wujie Wang, Minkai Xu, Chen Cai, Benjamin Kurt Miller, Tess Smidt, Yusu Wang, Jian Tang, Rafael
+                  Gómez-Bombarelli
+                </a>
+              </div>
             </div>
             <p class="paragraph">
               <a class="slight-bold">Speaker:</a>
-              Maybe you? If you want to present a paper (doesn't have to be yours) or you have someone who might be
-              interested in presenting his work then just write me a message on
-              <a href="https://join.slack.com/t/logag/shared_invite/zt-u0mbo1ec-zElmvd1oSCXGjXvxLSokvg" target="_blank"
-                 class="link-style-green">Slack</a>
-              or via email!
+              First author of the paper <a
+              class="item-subtitle link-style-black"
+              href="https://wwj.mit.edu/wujie-wangs-website"
+              target="_blank">Wujie Wang</a> who is a 4th year graduate student at MIT in
+              Materials Sc. & Eng. He holds a B.A. in Physics from Wesleyan and B.S in Engineering and Applied Sciences
+              from Caltech. Also joining us is <a
+              class="item-subtitle link-style-black"
+              href="https://minkaixu.com/"
+              target="_blank">Minkai Xu</a> who was working at MILA with Jian Tang and now received a
+              Standford Graduate Fellowship with which he will pursue his PhD at Stanford.
+            </p>
+            <p class="no-margin">
+              <a class="slight-bold">Abstract:</a>
+              Coarse-graining (CG) of molecular simulations simplifies the particle representation by grouping selected
+              atoms into pseudo-beads and therefore drastically accelerates simulation. However, such CG procedure
+              induces information losses, which makes accurate backmapping, i.e., restoring fine-grained (FG)
+              coordinates from CG coordinates, a long-standing challenge. Inspired by the recent progress in generative
+              models and equivariant networks, we propose a novel model that rigorously embeds the vital probabilistic
+              nature and geometric consistency requirements of the backmapping transformation. Our model encodes the FG
+              uncertainties into an invariant latent space and decodes them back to FG geometries via equivariant
+              convolutions. To standardize the evaluation of this domain, we further provide three comprehensive
+              benchmarks based on molecular dynamics trajectories. Extensive experiments show that our approach always
+              recovers more realistic structures and outperforms existing data-driven methods with a significant margin.
             </p>
           </div>
 
@@ -365,6 +356,26 @@
               best competitor that does not overfit and is 23-to-30 times faster than autoregressive generators.
             </p>
           </div>
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                21st of June 2022
+              </div>
+            </div>
+            <p class="paragraph">
+              <a class="slight-bold">Speaker:</a>
+              Maybe you? If you want to present a paper (doesn't have to be yours) or you have someone who might be
+              interested in presenting his work then just write me a message on
+              <a href="https://join.slack.com/t/logag/shared_invite/zt-u0mbo1ec-zElmvd1oSCXGjXvxLSokvg" target="_blank"
+                 class="link-style-green">Slack</a>
+              or via email!
+            </p>
+          </div>
 
           <!--
           <div class="item" fxLayout="column">
@@ -430,6 +441,57 @@
       <div>
         <div fxFlex="10" fxFlex.xs="2"></div>
         <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
+
+
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+              <h3>
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2204.07697"
+                   target="_blank">
+                  Theory of Graph Neural Networks: Representation and Learning (ICLR 2022)
+                </a></h3>
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                17th of May 2022
+              </div>
+              <div>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Stefanie Jegelka
+                </a>
+              </div>
+            </div>
+            <div>
+              <iframe ngClass.gt-sm="float-right" [src]='safeURLGNNTheory' allowfullscreen></iframe>
+              <p class="paragraph">
+                <a class="slight-bold">Resources:</a>
+                (~70 participants)
+              </p>
+              <p class="paragraph">
+                <a class="slight-bold">Speaker:</a>
+                <a
+                  class="item-subtitle link-style-black"
+                  href="https://cptq.github.io/"
+                  target="_blank">Derek Lim</a>, who is a PhD students in the group of Prof. Stefanie Jegelka
+                at MIT. Derek previously presented ESAN and Sign/Basis Nets in the reading group!
+              </p>
+              <p class="no-margin">
+                <a class="slight-bold">Abstract:</a>
+                Graph Neural Networks (GNNs), neural network architectures targeted to learning representations of
+                graphs,
+                have become a popular learning model for prediction tasks on nodes, graphs and configurations of points,
+                with wide success in practice. This article summarizes a selection of the emerging theoretical results
+                on
+                approximation and learning properties of widely used message passing GNNs and higher-order GNNs,
+                focusing
+                on representation, generalization and extrapolation. Along the way, it summarizes mathematical
+                connections.
+              </p>
+            </div>
+          </div>
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
 
           <div class="item" fxLayout="column">
             <div fxLayout="row">
