--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -681,6 +681,22 @@
             </div>
             <div fxFlex="60">
               <div class="text-area" fxFlex.lt-md="" fxFlex="70" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
+                  <div fxLayout="row">
+                    <h3>
+                      <a class="item-subtitle link-style-black"
+                         href="https://www.absci.com/"
+                         target="_blank">
+                        Absci</a></h3>
+                  </div>
+                  <p class="item-date-loc">
+                    <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                    July 2022: ISMB 2022 Machine Learning in Computational and Systems Biology. Hosts: Prof. Zitnik, Prof. Vallejos
+                  </p>
+                  <p class="item-content">
+                  </p>
+                </div>
+                <hr ngClass.gt-sm="separator-slim" ngClass.lt-md="separator-slim--small">
 
                 <div class="item" fxLayout="column" fxLayoutAlign.lt-md="center center">
                   <div fxLayout="row">
