--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -207,7 +207,7 @@
           <div class="item" fxLayout="column">
             <div fxLayout="row">
               <h3>
-                <a class="item-subtitle link-style-black" href="https://hannes-stark.com/assets/torsional_diffusion.pdf"
+                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2206.01729"
                    target="_blank">
                   Torsional Diffusion for Molecular Conformer Generation
                 </a></h3>
